Fix too long names of campaign bug

--- a/testing_webpage/testing_webpage/static/css/fonts.css
+++ b/testing_webpage/testing_webpage/static/css/fonts.css
@@ -13,3 +13,23 @@
     font-family: BertholdAkzidenzGroteskRegular;
     src: url(/static/fonts/BertholdAkzidenzGroteskRegular.otf);
 }
+
+@font-face {
+    font-family: BertholdAkzidenzGroteskBELight;
+    src: url(/static/fonts/BertholdAkzidenzGroteskBELight.otf);
+}
+
+@font-face {
+    font-family: BertholdAkzidenzGroteskBold;
+    src: url(/static/fonts/BertholdAkzidenzGroteskBold.otf);
+}
+
+@font-face {
+    font-family: BertholdAkzidenzGroteskItalic;
+    src: url(/static/fonts/BertholdAkzidenzGroteskItalic.otf);
+}
+
+@font-face {
+    font-family: BertholdAkzidenzGroteskSuper;
+    src: url(/static/fonts/BertholdAkzidenzGroteskSuper.otf);
+}
